--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="image-wrapper">
-                                        <img class="img-fluid" src="images/testimonial-1.jpg" alt="alternative">
+                                        <img class="img-fluid" src="images/testimonial-1.jpg" loading="lazy" alt="alternative">
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
                                         <div class="testimonial-text">“Learning Spanish with Neha ma’am has been an amazing experience! She explains everything so clearly and always makes sure we understand before moving on. Her classes are interactive, fun, and full of real-life examples.”</div>
@@ -375,7 +375,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="image-wrapper">
-                                        <img class="img-fluid" src="images/testimonial-5.jpg" alt="alternative">
+                                        <img class="img-fluid" src="images/testimonial-5.jpg" loading="lazy" alt="alternative">
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
                                         <div class="testimonial-text">"Learning Spanish online with Ms. Neha was a great experience! With her help, I cleared a state-level Spanish exam. I'm from France, and her teaching worked perfectly for me."
@@ -387,7 +387,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="image-wrapper">
-                                        <img class="img-fluid" src="images/testimonial-2.jpg" alt="alternative">
+                                        <img class="img-fluid" src="images/testimonial-2.jpg" loading="lazy" alt="alternative">
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
                                         <div class="testimonial-text">"La profesora Neha is one of the best teachers I’ve ever had. Her passion for Spanish is contagious and I’ve improved a lot because of her."</div>
@@ -399,7 +399,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="image-wrapper">
-                                        <img class="img-fluid" src="images/testimonial-3.jpg" alt="alternative">
+                                        <img class="img-fluid" src="images/testimonial-3.jpg" loading="lazy" alt="alternative">
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
                                         <div class="testimonial-text">"Even as a native speaker, I enjoyed Ms. Neha’s classes a lot. She made learning fun and created a very welcoming environment for everyone. I loved being part of her class!"</div>
@@ -411,7 +411,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="image-wrapper">
-                                        <img class="img-fluid" src="images/default-testimonial.webp" alt="alternative">
+                                        <img class="img-fluid" src="images/default-testimonial.webp" loading="lazy" alt="alternative">
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
                                         <div class="testimonial-text">"Ms. Neha is an exceptional Spanish teacher. My son used to struggle with the subject, but under her guidance, he has developed a strong foundation and a genuine interest in learning."
@@ -423,7 +423,7 @@
                                 <!-- Slide -->
                                 <div class="swiper-slide">
                                     <div class="image-wrapper">
-                                        <img class="img-fluid" src="images/default-testimonial.webp" alt="alternative">
+                                        <img class="img-fluid" src="images/default-testimonial.webp" loading="lazy" alt="alternative">
                                     </div> <!-- end of image-wrapper -->
                                     <div class="text-wrapper">
                                         <div class="testimonial-text">"Thanks to Neha ma’am, I can now speak and understand basic Spanish confidently. She uses fun methods to teach and is always available to clear doubts, even after class. Highly recommended!"
@@ -571,55 +571,55 @@
             </div> <!-- end of col -->
         </div> <!-- end of row -->
     <div class="image-masonry">
-          <a class="thumbnail" href="images/2.jpeg"
+          <a class="thumbnail" href="images/2.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/2.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/2.jpeg" alt="Image 2">
+             data-image="images/2.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/2.webp" loading="lazy" alt="Image 2">
           </a>
-          <a class="thumbnail" href="images/14.jpeg"
+          <a class="thumbnail" href="images/14.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/14.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/14.jpeg" alt="Image 7">
+             data-image="images/14.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/14.webp" loading="lazy" alt="Image 7">
           </a>
-          <a class="thumbnail" href="images/5.jpeg"
+          <a class="thumbnail" href="images/5.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/5.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/5.jpeg" alt="Image 5">
+             data-image="images/5.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/5.webp" loading="lazy" alt="Image 5">
           </a>
-          <a class="thumbnail" href="images/7.jpeg"
+          <a class="thumbnail" href="images/7.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/7.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/7.jpeg" alt="Image 7">
+             data-image="images/7.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/7.webp" loading="lazy" alt="Image 7">
           </a>
-          <a class="thumbnail" href="images/15.jpeg"
+          <a class="thumbnail" href="images/15.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/15.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/15.jpeg" alt="Image 8">
+             data-image="images/15.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/15.webp" loading="lazy" alt="Image 8">
           </a>
-          <a class="thumbnail" href="images/3.jpeg"
+          <a class="thumbnail" href="images/3.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/3.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/3.jpeg" alt="Image 3">
+             data-image="images/3.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/3.webp" loading="lazy" alt="Image 3">
           </a>
-          <a class="thumbnail" href="images/6.jpeg"
+          <a class="thumbnail" href="images/6.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/6.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/6.jpeg" alt="Image 6">
+             data-image="images/6.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/6.webp" loading="lazy" alt="Image 6">
           </a>
-          <a class="thumbnail" href="images/4.jpeg"
+          <a class="thumbnail" href="images/4.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/4.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/4.jpeg" alt="Image 4">
+             data-image="images/4.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/4.webp" loading="lazy" alt="Image 4">
           </a>
-          <a class="thumbnail" href="images/8.jpeg"
+          <a class="thumbnail" href="images/8.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/8.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/8.jpeg" alt="Image 8">
+             data-image="images/8.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/8.webp" loading="lazy" alt="Image 8">
           </a>
-          <a class="thumbnail" href="images/11.jpeg"
+          <a class="thumbnail" href="images/11.webp"
              data-image-id="" data-toggle="modal" data-title=""
-             data-image="images/11.jpeg" data-target="#image-gallery">
-            <img class="img-thumbnail" src="images/11.jpeg" alt="Image 4">
+             data-image="images/11.webp" data-target="#image-gallery">
+            <img class="img-thumbnail" src="images/11.webp" loading="lazy" alt="Image 4">
           </a>
         </div>
       
