--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <li class="media"><i class="fas fa-users"></i><div class="media-body"><strong>Small Batch Size (max 10):</strong> Personalised Attention</div></li>
             <li class="media"><i class="fas fa-clock"></i><div class="media-body"><strong>Duration:</strong> 2 Months (3 Days/Week)</div></li>
             <li class="media"><i class="fas fa-calendar-week"></i></i><div class="media-body"><strong>New Batch Staring from:</strong> 15th, 20th, 25th May 2025</div></li><br/>
-            <li class="media" style="text-align: right;font-size: 1.25rem;"><div class="media-body">Early Bird Discount <strong>₹ <s>11999</s> &nbsp;8999/- </strong></div></li>          </ul>
+            <li class="media" style="text-align: right;font-size: 1.25rem;"><div class="media-body">Early Bird Discount <strong>₹ <s style="text-decoration-thickness: 2px;"> 3999 </s> &nbsp;2499/ per Month- </strong></div></li>          </ul>
         </div>
         <div class="col-lg-6">
             <form id="registrationForm" class="needs-validation" novalidate action="https://formspree.io/f/xyzwzono" method="post">
